--- a/nft-preview-card-component-main/nft-preview-card-component-main/styles.css
+++ b/nft-preview-card-component-main/nft-preview-card-component-main/styles.css
@@ -18,6 +18,8 @@
     --very-dark-blue-card-BG: hsl(216, 50%, 16%);
     --very-dark-blue-line: hsl(215, 32%, 27%);
     --white: hsl(0, 0%, 100%);
+
+    
 }
 
 body
@@ -55,14 +57,25 @@ body
     /* border: 2px solid white; */
     padding: 30px; 
     overflow: hidden;
-
 }
+
+.card .top:hover
+{
+    background-color: var(--cyan);
+}
+
 
 .card .top img
 {
     width: 100%;
     height: 100%;
     border-radius: 20px;
+}
+
+.card .top img:hover
+{
+    opacity: .3;
+    background-color: var(--cyan);
 }
 
 .card .bottom
